# test35810

./: .dockerignore  .gitignore  DOCKER.md  Dockerfile  LEGAL_NOTICE.md  MANIFEST.in  Makefile  README.md  autocoder_usage.py  changelog.md  cleanup.py  docker-compose.no-auth.yml  docker-compose.yml  lol.py  pyproject.toml  setup.py  t.py
.devcontainer/: devcontainer.json
.github/: dependabot.yml  labeler.yml
.github/workflows/: auto-assign-bug.yml  auto-merge-dependencies.yml  dependency-review.yml  deploy-webscout-supabase.yml  labeler.yml  release.yml
docs/: decorators.md  openai-api-server.md  sanitize.md
inferno/: __init__.py  __main__.py  cli.py  lol.py
webscout/: AIauto.py  AIbase.py  AIutel.py  Bard.py  Bing_search.py  DWEBS.py  __init__.py  cli.py  client.py  conversation.py  exceptions.py  optimizers.py  prompt_manager.py  sanitize.py  update_checker.py  version.py  webscout_search.py  webscout_search_async.py  yep_search.py
webscout/Extra/: Act.md  __init__.py  gguf.md  gguf.py  weather.md
webscout/Extra/GitToolkit/: __init__.py
webscout/Extra/GitToolkit/gitapi/: utils.py
webscout/Extra/YTToolkit/: README.md
webscout/Extra/YTToolkit/ytapi/: README.md  extras.py  patterns.py  stream.py  video.py
webscout/Extra/autocoder/: __init__.py  autocoder.py  autocoder_utiles.py  rawdog.py
webscout/Extra/tempmail/: README.md  __init__.py  async_utils.py  base.py  cli.py  emailnator.py  mail_tm.py  temp_mail_io.py
webscout/Litlogger/: __init__.py  formats.py  handlers.py  logger.py
webscout/Local/: README.md  __init__.py  __main__.py  api.py  cli.py  config.py  llm.py  model_manager.py  server.py  utils.py
webscout/Provider/: Aitopia.py  AllenAI.py  Andi.py  Blackboxai.py  C4ai.py  ChatGPTClone.py  ChatGPTES.py  ChatGPTGratis.py  ChatSandbox.py  Chatify.py  Cloudflare.py  DARKAI.py  DeepSeek.py  Deepinfra.py  ElectronHub.py  ExaAI.py  ExaChat.py  Flowith.py  Free2GPT.py  FreeGemini.py  GPTWeb.py  Gemini.py  GeminiProxy.py  GithubChat.py  GizAI.py  Glider.py  GptOss.py  Groq.py  HeckAI.py  HuggingFaceChat.py  Hunyuan.py  Jadve.py  Kimi.py  Koboldai.py  LambdaChat.py  Llama3.py  MCPCore.py  Marcus.py  MiniMax.py  Nemotron.py  (+67 more)
webscout/Provider/AISEARCH/: DeepFind.py  ISou.py  PERPLEXED_search.py  Perplexity.py  README.md  __init__.py  felo_search.py  genspark_search.py  hika_search.py  iask_search.py  monica_search.py  scira_search.py  stellar_search.py  webpilotai_search.py  xdash_search.py
webscout/Provider/OPENAI/: BLACKBOXAI.py  Cloudflare.py  FalconH1.py  FreeGemini.py  GeminiProxy.py  MiniMax.py  NEMOTRON.py  PI.py  Qwen3.py  README.md  README_AUTOPROXY.md  TogetherAI.py  TwoAI.py  __init__.py  ai4chat.py  api.py  autoproxy.py  base.py  c4ai.py  chatgpt.py  chatgptclone.py  chatsandbox.py  copilot.py  deepinfra.py  e2b.py  exaai.py  exachat.py  flowith.py  freeaichat.py  friendli.py  glider.py  gptoss.py  groq.py  heckai.py  kimi.py  llmchatco.py  mcpcore.py  monochat.py  multichat.py  netwrck.py  (+19 more)
webscout/Provider/STT/: README.md  __init__.py  base.py  elevenlabs.py  utils.py
webscout/Provider/TTI/: README.md  __init__.py  aiarta.py  base.py  bing.py  fastflux.py  freeaiplayground.py  gpt1image.py  imagen.py  infip.py  magicstudio.py  monochat.py  nexra.py  piclumen.py  pixelmuse.py  pollinations.py  together.py  utils.py  venice.py
webscout/Provider/TTI/AiForce/: README.md  __init__.py
webscout/Provider/TTI/FreeAIPlayground/: README.md  __init__.py  async_freeaiplayground.py
webscout/Provider/TTI/ImgSys/: README.md  __init__.py
webscout/Provider/TTI/MagicStudio/: README.md  __init__.py
webscout/Provider/TTI/Nexra/: __init__.py  async_nexra.py  sync_nexra.py
webscout/Provider/TTI/PollinationsAI/: README.md  __init__.py
webscout/Provider/TTI/aiarta/: README.md  __init__.py
webscout/Provider/TTI/artbit/: README.md  __init__.py
webscout/Provider/TTI/fastflux/: README.md  __init__.py
webscout/Provider/TTI/huggingface/: README.md  __init__.py  async_huggingface.py  sync_huggingface.py
webscout/Provider/TTI/piclumen/: README.md  __init__.py
webscout/Provider/TTI/pixelmuse/: README.md  __init__.py  async_pixelmuse.py  sync_pixelmuse.py
webscout/Provider/TTI/talkai/: README.md  __init__.py
webscout/Provider/TTS/: README.md  __init__.py  base.py  deepgram.py  elevenlabs.py  freetts.py  gesserit.py  murfai.py  openai_fm.py  parler.py  speechma.py  sthir.py  streamElements.py
webscout/Provider/UNFINISHED/: ChutesAI.py  PERPLEXED_search.py  VercelAIGateway.py  Youchat.py  chatgpt.py  e2b_api.py  emainator.py  fetch_together_models.py  iask.py  liner_api_request.py  oivscode.py  puterjs.py  samurai.py  test_lmarena.py
webscout/auth/: __init__.py  api_key_manager.py  auth_system.py  config.py  database.py  exceptions.py  middleware.py  models.py  providers.py  rate_limiter.py  request_models.py  request_processing.py  routes.py  schemas.py  server.py  simple_logger.py  swagger_ui.py
webscout/auth/templates/: swagger_ui.html
webscout/auth/templates/components/: authentication.html  base.html  endpoints.html  examples.html  footer.html  header.html  models.html  navigation.html
webscout/auth/templates/static/: api.js  icons.js  main.js  particles.js  styles.css  theme-toggle.js  ui.js
webscout/litagent/: Readme.md  agent.py
webscout/litlogger/: README.md  levels.py  logger.py
webscout/litprinter/: Readme.md  __init__.py  builtins.py  coloring.py  core.py  lit.py  litprint.py  traceback.py
webscout/scout/: README.md  element.py
webscout/scout/core/: crawler.py  scout.py
webscout/swiftcli/: Readme.md  __init__.py  exceptions.py
webscout/swiftcli/core/: __init__.py  cli.py  context.py  group.py
webscout/swiftcli/decorators/: __init__.py  command.py  options.py  output.py
webscout/swiftcli/plugins/: __init__.py  base.py  manager.py
webscout/swiftcli/utils/: __init__.py  formatting.py  parsing.py
webscout/zeroart/: __init__.py  base.py  effects.py  fonts.py
